# ICS40125

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: documentation.yml
Experimentation/abtesting/: index.html
Experimentation/deciding/: index.html
Experimentation/hte/: index.html
Experimentation/uplift/: index.html
__init__/: index.html
assessments/project1/: index.html
assessments/project1_old/: index.html
assessments/project3/: index.html
clases/clase_01/: index.html
clases/clase_02/: index.html
clases/clase_03/: index.html
clases/clase_04/: index.html
clases/clase_05/: index.html
clases/clase_06/: index.html
clases/clase_06a/: index.html
clases/clase_07/: index.html
clases/clase_08/: index.html
clases/clase_09/: index.html
clases/clase_10/: index.html
clases/clase_11/: index.html
clases/clase_12a/: index.html
clases/clase_12b/: index.html
clases/clases/: index.html
datasets/datasets/: index.html
docs/: evaluaciones.md  evaluation.md  index.md  perfil.md  programa.md
docs/clases/: clases.md
docs/datasets/: datasets.md
docs/homeworks/: hw_02.ipynb
docs/labs/: lab_01.ipynb  lab_02.ipynb  lab_03.ipynb  lab_04.ipynb  lab_05.ipynb  lab_06.ipynb  lab_07.ipynb  lab_08.ipynb  lab_09.ipynb  lab_10.ipynb
docs/projects/: project_01.ipynb  project_02.ipynb  project_definition.md
evaluaciones/: index.html
evaluation/: index.html
exercises/exercises/: index.html
labs/lab_01/: index.html
perfil/: index.html
programa/: index.html
search/: search_index.json
(+84 files in other folders)
